--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="letter">A</div>
                 <!-- <div class="C icon lower-case"></div> -->
             </div>
-            <img id="letter-image" src="./images/0.jpg" alt="C for c_cup" letter="C">
+            <img id="letter-image" src="./images/0.jpg" alt="Apple">
         </div>
         <div class="arrow-right"></div>
 
