resizing and adding some simple instructions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="arrow-right"></div>
 
     </div>
-    <button class="next button">next letter</button>
+    <div class="Instructions">Press a letter or image to hear the text</button>
 
 <script src="./js/index.js"></script>
 </body>
